syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

//полезная ссылочка https://github.com/protocolbuffers/protobuf/blob/main/src/google/protobuf/wrappers.proto

import "google/protobuf/wrappers.proto";

service ClinicService{
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
	rpc GetClientById (GetClientByIdRequest) returns (GetClientByIdResponse);
	rpc GetClients (GetClientsRequest) returns (GetClientsResponse);	
}

message CreateClientRequest{
	string document = 1;
	string surname = 2;
	string firstname = 3;
	string patronymic = 4;
}

message CreateClientResponse{
	google.protobuf.Int32Value clientId = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message UpdateClientRequest{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}

message UpdateClientResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message DeleteClientRequest{
	int32 clientId = 1;
}

message DeleteClientResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message GetClientByIdRequest{
	int32 clientId = 1;
}

message GetClientByIdResponse{
	ClientResponse client = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message ClientResponse{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}

message GetClientsRequest{

}

message GetClientsResponse{
	repeated ClientResponse clients = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}