syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";

service ClinicConsultationService{
	rpc CreateConsultation (CreateConsultationRequest) returns (CreateConsultationResponse);
	rpc UpdateConsultation (UpdateConsultationRequest) returns (UpdateConsultationResponse);
	rpc DeleteConsultation (DeleteConsultationRequest) returns (DeleteConsultationResponse);
	rpc GetConsultationById (GetConsultationByIdRequest) returns (GetConsultationByIdResponse);
	rpc GetConsultations (GetConsultationsRequest) returns (GetConsultationsResponse);
}

message CreateConsultationRequest{
	int32 clientId = 1;
	int32 petId = 2;
	string creationDate =3;
	string description = 4;	
}

message CreateConsultationResponse{
	google.protobuf.Int32Value consultationId = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message UpdateConsultationRequest{
	int32 consultationId = 1;
	string creationDate = 2;
	string description = 3;
}

message UpdateConsultationResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message DeleteConsultationRequest{
	int32 consultationId = 1;
}

message DeleteConsultationResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message GetConsultationByIdRequest{
	int32 consultationId = 1;
}

message GetConsultationByIdResponse{
	ConsultationResponse consultation =1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message GetConsultationsRequest{

}

message GetConsultationsResponse{
	repeated ConsultationResponse consultations =1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message ConsultationResponse{
	int32 consultationId = 1;
	int32 clientId = 2;
	int32 petId = 3;
	string creationDate = 4;
	string description = 5;
}